--- a/setka.html
+++ b/setka.html
@@ -7,12 +7,12 @@
         <div class="container"> 
             <div class="row">
                 <div class="col-4">
-                    <div class="card">
-                        <p align=center>Текст Текст Текст Текст Текст Текст</p>    
+                    <div class="card"> 
                     </div> 
                 </div> 
                 <div class="col-4">
                     <div class="card">
+                            <p align=center>Текст2 Текст2 Текст2 Текст2 Текст2 Текст2</p> 
                     </div>
                 </div>   
                 <div class="col-4">
